src/client/style/index.css
/* ... */
.building12 {
    display:inline-block;
    background-image: url("resources/front/Matchbox_UI_MenuBuildings.png");
    height:calc(64px * 2);
    width:calc(64px * 2);
    background-position:calc(5 * 2 * 64px) calc(5 * 2 * 64px);
    background-size:calc(1664px * 1) calc(640px * 1);
    pointer-events: none;
}
.building13 {
    display:inline-block;
    background-image: url("resources/front/Matchbox_UI_MenuBuildings.png");
    height:calc(64px * 2);
    width:calc(64px * 2);
    background-position:calc(2 * 2 * 64px) calc(5 * 2 * 64px);
    background-size:calc(1664px * 1) calc(640px * 1);
    pointer-events: none;
}
.building14 {
    display:inline-block;
    background-image: url("resources/front/Matchbox_UI_MenuBuildings.png");
    height:calc(64px * 2);
    width:calc(64px * 2);
    background-position:calc(1 * 2 * 64px) calc(5 * 2 * 64px);
    background-size:calc(1664px * 1) calc(640px * 1);
    pointer-events: none;
}
.building15 {
    display:inline-block;
    background-image: url("resources/front/Matchbox_UI_MenuBuildings.png");
    height:calc(64px * 2);
    width:calc(64px * 2);
    background-position:calc(2 * 2 * 64px) calc(3 * 2 * 64px);
    background-size:calc(1664px * 1) calc(640px * 1);
    pointer-events: none;
}
.building16 {
    display:inline-block;
    background-image: url("resources/front/Matchbox_UI_MenuBuildings.png");
    height:calc(64px * 2);
    width:calc(64px * 2);
    background-position:calc(10 * 2 * 64px) calc(3 * 2 * 64px);
    background-size:calc(1664px * 1) calc(640px * 1);
    pointer-events: none;
}
.building17 {
    display:inline-block;
    background-image: url("resources/front/Matchbox_UI_MenuBuildings.png");
    height:calc(64px * 2);
    width:calc(64px * 2);
    background-position:calc(4 * 2 * 64px) calc(3 * 2 * 64px);
    background-size:calc(1664px * 1) calc(640px * 1);
    pointer-events: none;
}
.building18 {
    display:inline-block;
    background-image: url("resources/front/Matchbox_UI_MenuBuildings.png");
    height:calc(64px * 2);
    width:calc(64px * 2);
    background-position:calc(1 * 2 * 64px) calc(3 * 2 * 64px);
    background-size:calc(1664px * 1) calc(640px * 1);
    pointer-events: none;
}

.building19 {
    display:inline-block;
    background-image: url("resources/front/Matchbox_UI_MenuBuildings.png");
    height:calc(64px * 2);
    width:calc(64px * 2);
    background-position:calc(10 * 2 * 64px) calc(5 * 2 * 64px);
    background-size:calc(1664px * 1) calc(640px * 1);
    pointer-events: none;
}
.building20 {
    display:inline-block;
    background-image: url("resources/front/Matchbox_UI_MenuBuildings.png");
    height:calc(64px * 2);
    width:calc(64px * 2);
    background-position:calc(10 * 2 * 64px) calc(4 * 2 * 64px);
    background-size:calc(1664px * 1) calc(640px * 1);
    pointer-events: none;
}
.building21 {
    display:inline-block;
    background-image: url("resources/front/Matchbox_UI_MenuBuildings.png");
    height:calc(64px * 2);
    width:calc(64px * 2);
    background-position:calc(3 * 2 * 64px) calc(4 * 2 * 64px);
    background-size:calc(1664px * 1) calc(640px * 1);
    pointer-events: none;
}
.building22 {
    display:inline-block;
    background-image: url("resources/front/Matchbox_UI_MenuBuildings.png");
    height:calc(64px * 2);
    width:calc(64px * 2);
    background-position:calc(13 * 2 * 64px) calc(3 * 2 * 64px);
    background-size:calc(1664px * 1) calc(640px * 1);
    pointer-events: none;
}
.building23 {
    display:inline-block;
    background-image: url("resources/front/Matchbox_UI_MenuBuildings.png");
    height:calc(64px * 2);
    width:calc(64px * 2);
    background-position:calc(5 * 2 * 64px) calc(3 * 2 * 64px);
    background-size:calc(1664px * 1) calc(640px * 1);
    pointer-events: none;
}
.building24 {
    display:inline-block;
    background-image: url("resources/front/Matchbox_UI_MenuBuildings.png");
    height:calc(64px * 2);
    width:calc(64px * 2);
    background-position:calc(8 * 2 * 64px) calc(3 * 2 * 64px);
    background-size:calc(1664px * 1) calc(640px * 1);
    pointer-events: none;
}
.building9 {
    display:inline-block;
    background-image: url("resources/front/Matchbox_UI_MenuBuildings.png");
    height:calc(64px * 2);
    width:calc(64px * 2);
    background-position:calc(8 * 2 * 64px) calc(5 * 2 * 64px);
    background-size:calc(1664px * 1) calc(640px * 1);
    pointer-events: none;
}
/* Coal mine == 17 */
.building25 {
    display:inline-block;
    background-image: url("resources/front/Matchbox_UI_MenuBuildings.png");
    height:calc(64px * 2);
    width:calc(64px * 2);
    background-position:calc(10 * 2 * 64px) calc(4 * 2 * 64px);
    background-size:calc(1664px * 1) calc(640px * 1);
    pointer-events: none;
}
/* Metal Mine == 21 */
.building26 {
    display:inline-block;
    background-image: url("resources/front/Matchbox_UI_MenuBuildings.png");
    height:calc(64px * 2);
    width:calc(64px * 2);
    background-position:calc(6 * 2 * 64px) calc(4 * 2 * 64px);
    background-size:calc(1664px * 1) calc(640px * 1);
    pointer-events: none;
}
.building27 {
    display:inline-block;
    background-image: url("resources/front/Matchbox_UI_MenuBuildings.png");
    height:calc(64px * 2);
    width:calc(64px * 2);
    background-position:calc(13 * 2 * 64px) calc(2 * 2 * 64px);
    background-size:calc(1664px * 1) calc(640px * 1);
    pointer-events: none;
}

.selectDisable {
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -o-user-select: none;
    user-select: none;
}

